Get content from master branch

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li><a href="https://twitter.com/d_sferruzza">@d_sferruzza</a></li>
 <li><a href="https://github.com/dsferruzza">github.com/dsferruzza</a></li>
 <li>développeur et responsable R&amp;D chez <a href="http://www.escaledigitale.com">Escale</a></li>
-<li>écrit des projets perso et pro en Scala et en Haskell (notamment) depuis ~ 1 an</li>
+<li>doctorant en génie logiciel à l'Université de Nantes</li>
+<li>écrit des projets perso et pro en Scala et en Haskell (notamment) depuis ~ 2 an</li>
 <li>ce talk est inspiré d'un article que j'ai écrit pour <a href="http://www.24joursdeweb.fr/2014/un-peu-de-programmation-fonctionnelle-en-javascript">24 jours de web</a></li>
 </ul>
 </section>
