Get content from master branch

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
     <span class="at">fairePorterLeChapeauAuDrManhattan</span>(missile)<span class="op">;</span>
     <span class="cf">return</span> nombre / <span class="dv">2</span><span class="op">;</span>
 <span class="op">}</span></code></pre></div>
-<p>Cette fonction a des <strong>effets de bord</strong> qu'on ne peut pas deviner en regardant sa valeur de retour. Il faut donc faire constamment attention lorsqu'on la manipule !</p>
+<p>Cette fonction a des <strong>effets de bord</strong> <em>observables</em> qu'on ne peut pas deviner en regardant sa valeur de retour. Il faut donc faire constamment attention lorsqu'on la manipule !</p>
 <div style="text-align:center">
 <img src="img/fail.gif" alt="" width="225">
 </div>
@@ -270,7 +270,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <ul>
 <li>transparence référentielle</li>
 <li>fonctions d’ordre supérieur</li>
-<li><em>évaluation paresseuse</em></li>
+<li><em>évaluation paresseuse</em> <mark>← venez à mon talk !</mark></li>
 <li><em>immuabilité</em></li>
 <li><em>systèmes de types avancés</em></li>
 <li>...</li>
