--- a/talk-programmation-fonctionnelle-en-js.html
+++ b/talk-programmation-fonctionnelle-en-js.html
@@ -59,6 +59,9 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li>écrit des projets perso et pro en Scala et en Haskell (notamment) depuis ~ 2 an</li>
 <li>ce talk est inspiré d'un article que j'ai écrit pour <a href="http://www.24joursdeweb.fr/2014/un-peu-de-programmation-fonctionnelle-en-javascript">24 jours de web</a></li>
 </ul>
+<div style="text-align:center">
+<img src="img/escale.png" alt="">
+</div>
 </section>
 <section id="découverte-de-la-programmation-fonctionnelle" class="slide level1">
 <h1>Découverte de la programmation fonctionnelle</h1>
