--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 <li>écrit des projets perso et pro en Scala et en Haskell (notamment) depuis ~ 2 an</li>
 <li>ce talk est inspiré d'un article que j'ai écrit pour <a href="http://www.24joursdeweb.fr/2014/un-peu-de-programmation-fonctionnelle-en-javascript">24 jours de web</a></li>
 </ul>
-<div style="text-align:center">
-<img src="img/escale.png" alt="">
-</div>
+<figure>
+<img src="img/escale.png" />
+</figure>
 </section>
 <section id="découverte-de-la-programmation-fonctionnelle" class="slide level1">
 <h1>Découverte de la programmation fonctionnelle</h1>
@@ -68,9 +68,9 @@
 <blockquote>
 <p>Apprendre Haskell permet d'écrire de meilleurs programmes, même dans d'autres langages.</p>
 </blockquote>
-<div style="text-align:center">
+<figure>
 <img src="img/promise.gif" />
-</div>
+</figure>
 <h2 id="on-va-voir-quelques-concepts-de-fp-qui-peuvent-sappliquer-à-javascript-et-comment-ça-améliore-le-code">On va voir quelques concepts de FP qui peuvent s'appliquer à JavaScript, et comment ça améliore le code !</h2>
 </section>
 <section id="fonction-impure" class="slide level1">
@@ -81,9 +81,11 @@
     return nombre / 2;
 }</code></pre>
 <p>Cette fonction a des <strong>effets de bord</strong> <em>observables</em> qu'on ne peut pas deviner en regardant sa valeur de retour. Il faut donc faire constamment attention lorsqu'on la manipule !</p>
-<div style="text-align:center">
+<figure>
 <img src="img/fail.gif" alt="" width="225">
-</div>
+</figure>
+
+
 </section>
 <section id="fonction-pure" class="slide level1">
 <h1>Fonction pure</h1>
@@ -92,9 +94,11 @@
 }</code></pre>
 <p>Cette fonction n'a pas d'effets de bord. Elle renvoie <strong>toujours</strong> le même résultat lorsqu'on l'appelle avec les mêmes arguments.</p>
 <pre class="javascript"><code>ajouterCinq(-4) == ajouterCinq(-4)</code></pre>
-<div style="text-align:center">
+<figure>
 <img src="img/excellent.gif" alt="" width="420">
-</div>
+</figure>
+
+
 </section>
 <section id="transparence-référentielle" class="slide level1">
 <h1>Transparence référentielle</h1>
@@ -102,9 +106,11 @@
 <p>Le résultat du programme ne change pas si on remplace une expression par une expression de valeur équivalente.</p>
 </blockquote>
 <p>Utiliser des fonctions pures permet de <strong>résonner</strong> sur son programme comme sur une équation.</p>
-<div style="text-align:center">
+<figure>
 <img src="img/mind_blown.gif" alt="" width="488">
-</div>
+</figure>
+
+
 </section>
 <section id="recommandations" class="slide level1">
 <h1>Recommandations</h1>
@@ -121,9 +127,11 @@
 <li>elle accepte au moins une autre fonction en paramètre</li>
 <li>elle retourne une fonction en résultat</li>
 </ul>
-<div style="text-align:center">
+<figure>
 <img src="img/first_class.gif" alt="" width="305">
-</div>
+</figure>
+
+
 </section>
 <section id="exemple-de-fonction-dordre-supérieur" class="slide level1">
 <h1>Exemple de fonction d'ordre supérieur</h1>
@@ -146,9 +154,11 @@ appliquerDeuxFois(foisTrois, 7);
 <li>écrire des fonctions composables, modulables, paramétrables</li>
 </ul>
 <p>On va voir un exemple concret : les opérations sur les tableaux en JS.</p>
-<div style="text-align:center">
+<figure>
 <img src="img/inception.gif" alt="" width="330">
-</div>
+</figure>
+
+
 </section>
 <section id="situation" class="slide level1">
 <h1>Situation</h1>
@@ -278,14 +288,12 @@ function filter(tableau, predicat) {
 </section>
 <section id="questions" class="slide level1">
 <h1>Questions ?</h1>
-<div style="text-align:center">
+<figure>
 <img src="img/question.gif" />
-</div>
-<div style="text-align:center">
+</figure>
 <p>Twitter : @d_sferruzza</p>
 <p>Slides sur GitHub :</p>
-<a href="http://github.com/dsferruzza/talk-programmation-fonctionnelle-en-js">dsferruzza/talk-programmation-fonctionnelle-en-js</a>
-</div>
+<p><a href="http://github.com/dsferruzza/talk-programmation-fonctionnelle-en-js">dsferruzza/talk-programmation-fonctionnelle-en-js</a></p>
 </section>
     </div>
   </div>
