--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 <blockquote>
 <p>Le résultat du programme ne change pas si on remplace une expression par une expression de valeur équivalente.</p>
 </blockquote>
-<p>Utiliser des fonctions pures permet de <strong>résonner</strong> sur son programme comme sur une équation.</p>
+<p>Utiliser des fonctions pures permet de <strong>raisonner</strong> sur son programme comme sur une équation.</p>
 <figure>
 <img src="img/mind_blown.gif" alt="" width="488">
 </figure>
