--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <li><a href="https://github.com/dsferruzza">github.com/dsferruzza</a></li>
 <li>développeur et responsable R&amp;D chez <a href="http://www.escaledigitale.com">Escale</a></li>
 <li>doctorant en génie logiciel à l'Université de Nantes</li>
-<li>écrit des projets perso et pro en Scala et en Haskell (notamment) depuis ~ 2 an</li>
+<li>écrit des projets perso et pro en Scala et en Haskell (notamment) depuis ~ 2 ans</li>
 <li>ce talk est inspiré d'un article que j'ai écrit pour <a href="http://www.24joursdeweb.fr/2014/un-peu-de-programmation-fonctionnelle-en-javascript">24 jours de web</a></li>
 </ul>
 <figure>
